# BloodBridge

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
backend/api/: __init__.py  main.py  schemas.py  test_api.py
backend/app/: __init__.py
backend/ml/forecasting/: __init__.py  forecaster.py  run_forecast.py
backend/ml/matching/: __init__.py  compatibility.py  engine.py  run_matching.py
backend/ml/ner/: __init__.py  entity_rules.py  extractor.py  run_ner.py
backend/ml/preprocessing/: __init__.py  cleaner.py  language_detect.py  pipeline.py  run_preprocessing.py  tokenizer.py
backend/ml/triage/: __init__.py  classifier.py  data_prep.py  evaluate.py  run_eval.py  train.py
configs/: model_config.yaml  training_config.yaml
data/: generate_all_data.py  merge_batches.py
data/annotated/: .gitkeep
data/raw/: .gitkeep  batch_01.json  batch_02.json  batch_03.json  batch_04.json  batch_05.json  batch_06.json  batch_07.json  batch_08.json  batch_09.json  batch_10.json  batch_11.json  batch_12.json  batch_13.json  batch_14.json  batch_15.json  batch_16.json  batch_17.json  batch_18.json  batch_19.json  batch_20.json  batch_21.json  batch_22.json  batch_23.json  batch_24.json  batch_25.json  batch_26.json  batch_27.json  batch_28.json  batch_29.json  batch_30.json
data/synthetic/: blood_demand_timeseries.csv
docker/: .gitkeep  Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: folder_structure.html  gemini_prompts.md
frontend/: index.html
frontend/src/: App.jsx  index.css
(+5 files in other folders)
