[project]
name = "bloodbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "faker>=40.23.0",
    "fastapi>=0.138.0",
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "pytorch-forecasting>=1.7.0",
    "pytorch-lightning>=2.6.5",
    "pyyaml>=6.0.3",
    "regex>=2026.5.9",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.14",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchcrf>=1.1.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
    "wandb>=0.27.2",
    "xgboost>=3.3.0",
]
